@@ -11,29 +11,18 @@ Written by Daniel Walker, 2020.
 #include "nfaRuntime.h"
 #include "nfaInternals.h"
 
-static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned int state, char character, unsigned char flags, unsigned char *nextStateSet);
+static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned int state, char character, unsigned char flags);
 static bool canTransitionToAcceptingState(const grrNfa nfa, unsigned int state);
 static void determineNextStateRecord(unsigned int depth, grrNfa nfa, unsigned int state, const nfaStateRecord *record, char character, unsigned char flags);
 static void maybePlaceRecord(const nfaStateRecord *record, unsigned int state, nfaStateSet *set, bool update_score);
 
 int grrMatch(const grrNfa nfa, const char *string, size_t len) {
-    int ret;
     unsigned int stateSetLen;
     unsigned char flags=GRR_NFA_FIRST_CHAR_FLAG;
-    unsigned char *curStateSet, *nextStateSet;
 
     stateSetLen=(nfa->length+1+7)/8; // The +1 is for the accepting state.
-    curStateSet=calloc(1,stateSetLen);
-    if ( !curStateSet ) {
-        return GRR_RET_OUT_OF_MEMORY;
-    }
-    SET_FLAG(curStateSet,0);
-
-    nextStateSet=malloc(stateSetLen);
-    if ( !nextStateSet ) {
-        free(curStateSet);
-        return GRR_RET_OUT_OF_MEMORY;
-    }
+    memset(nfa->current.s_flags,0,stateSetLen);
+    SET_FLAG(nfa->current.s_flags,0);
 
     for (size_t idx=0; idx<len; idx++) {
         bool stillAlive=false;
@@ -41,54 +30,47 @@ int grrMatch(const grrNfa nfa, const char *string, size_t len) {
 
         character=string[idx];
         if ( !isprint(character) && character != '\t' ) {
-            ret=GRR_RET_BAD_DATA;
-            goto done;
+            return GRR_RET_BAD_DATA;
         }
+
         character=ADJUST_CHARACTER(character);
-        memset(nextStateSet,0,stateSetLen);
+        memset(nfa->next.s_flags,0,stateSetLen);
 
         if ( idx == len-1 ) {
             flags |= GRR_NFA_LAST_CHAR_FLAG;
         }
 
         for (unsigned int state=0; state<nfa->length; state++) {
-            if ( !IS_FLAG_SET(curStateSet,state) ) {
+            if ( !IS_FLAG_SET(nfa->current.s_flags,state) ) {
                 flags &= ~GRR_NFA_FIRST_CHAR_FLAG;
                 continue;
             }
 
-            if ( determineNextState(0,nfa,state,character,flags,nextStateSet) ) {
+            if ( determineNextState(0,nfa,state,character,flags) ) {
                 stillAlive=true;
             }
         }
 
         if ( !stillAlive ) {
-            ret=GRR_RET_NOT_FOUND;
-            goto done;
+            return GRR_RET_NOT_FOUND;
         }
 
-        memcpy(curStateSet,nextStateSet,stateSetLen);
+        memcpy(nfa->current.s_flags,nfa->next.s_flags,stateSetLen);
         flags &= ~GRR_NFA_FIRST_CHAR_FLAG;
     }
 
     for (unsigned int k=0; k<nfa->length; k++) {
-        if ( IS_FLAG_SET(curStateSet,k) && canTransitionToAcceptingState(nfa,k) ) {
-            ret=GRR_RET_OK;
-            goto done;
+        if ( IS_FLAG_SET(nfa->current.s_flags,k) && canTransitionToAcceptingState(nfa,k) ) {
+            return GRR_RET_OK;
         }
     }
-    ret=GRR_RET_NOT_FOUND;
 
-    done:
-
-    free(curStateSet);
-    free(nextStateSet);
-
-    return ret;
+    return GRR_RET_NOT_FOUND;
 }
 
 int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t *end, size_t *cursor, bool tolerateNonprintables) {
     unsigned int length;
+    unsigned char flags=GRR_NFA_FIRST_CHAR_FLAG;
 
     length=nfa->length;
     nfa->current.length=0;
@@ -99,7 +81,6 @@ int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t 
 
     for (size_t idx=0; idx<len; idx++) {
         char character;
-        unsigned char flags=0;
         unsigned int currentLength;
         nfaStateRecord firstState;
 
@@ -126,9 +107,9 @@ int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t 
             }
 
             for (unsigned int k=0; k<currentLength; k++) {
-                if ( nfa->current.records[k].state == length ) {
+                if ( nfa->current.s_records[k].state == length ) {
                     if ( k > 0 ) {
-                        memcpy(nfa->current.records+0,nfa->current.records+k,sizeof(nfa->current.records[0]));
+                        memcpy(nfa->current.s_records+0,nfa->current.s_records+k,sizeof(nfa->current.s_records[0]));
                     }
                     currentLength=nfa->current.length=1;
                     goto skip_over_clear;
@@ -159,7 +140,7 @@ int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t 
         character=ADJUST_CHARACTER(character);
 
         for (unsigned int k=0; k<currentLength; k++) {
-            determineNextStateRecord(0,nfa,nfa->current.records[k].state,nfa->current.records+k,character,flags);
+            determineNextStateRecord(0,nfa,nfa->current.s_records[k].state,nfa->current.s_records+k,character,flags);
         }
 
         firstState.state=0;
@@ -168,17 +149,19 @@ int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t 
 
         determineNextStateRecord(0,nfa,0,&firstState,character,flags);
 
-        memcpy(nfa->current.records,nfa->next.records,nfa->next.length*sizeof(*nfa->next.records));
+        memcpy(nfa->current.s_records,nfa->next.s_records,nfa->next.length*sizeof(*nfa->next.s_records));
         nfa->current.length=nfa->next.length;
+
+        flags &= ~GRR_NFA_FIRST_CHAR_FLAG;
     }
 
     for (unsigned int k=0; k<nfa->current.length; k++) {
-        if ( nfa->current.records[k].state == length ) {
+        if ( nfa->current.s_records[k].state == length ) {
             if ( start ) {
-                *start=nfa->current.records[k].startIdx;
+                *start=nfa->current.s_records[k].startIdx;
             }
             if ( end ) {
-                *end=nfa->current.records[k].endIdx;
+                *end=nfa->current.s_records[k].endIdx;
             }
 
             return GRR_RET_OK;
@@ -188,7 +171,7 @@ int grrSearch(grrNfa nfa, const char *string, size_t len, size_t *start, size_t 
     return GRR_RET_NOT_FOUND;
 }
 
-static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned int state, char character, unsigned char flags, unsigned char *nextStateSet) {
+static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned int state, char character, unsigned char flags) {
     const nfaNode *nodes;
     bool stillAlive=false;
 
@@ -205,7 +188,7 @@ static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned in
         newState=state+nodes[state].transitions[k].motion;
 
         if ( IS_FLAG_SET(nodes[state].transitions[k].symbols,character) ) {
-            SET_FLAG(nextStateSet,newState);
+            SET_FLAG(nfa->next.s_flags,newState);
             stillAlive=true;
         }
         else if ( IS_FLAG_SET(nodes[state].transitions[k].symbols,GRR_NFA_EMPTY_TRANSITION) ) {
@@ -217,7 +200,7 @@ static bool determineNextState(unsigned int depth, const grrNfa nfa, unsigned in
                 continue;
             }
 
-            if ( determineNextState(depth+1,nfa,newState,character,flags,nextStateSet) ) {
+            if ( determineNextState(depth+1,nfa,newState,character,flags) ) {
                 stillAlive=true;
             }
         }
@@ -288,22 +271,22 @@ static void maybePlaceRecord(const nfaStateRecord *record, unsigned int state, n
     size_t newScore;
 
     for (k=0; k<set->length; k++) {
-        if ( set->records[k].state == state ) {
+        if ( set->s_records[k].state == state ) {
             break;
         }
     }
 
     newScore=record->score+(update_score? 1 : 0);
-    if ( k == set->length || newScore > set->records[k].score ) {
-        set->records[k].startIdx=record->startIdx;
-        set->records[k].endIdx=record->endIdx;
-        set->records[k].score=newScore;
+    if ( k == set->length || newScore > set->s_records[k].score ) {
+        set->s_records[k].startIdx=record->startIdx;
+        set->s_records[k].endIdx=record->endIdx;
+        set->s_records[k].score=newScore;
         if ( update_score ) {
-            set->records[k].endIdx++;
+            set->s_records[k].endIdx++;
         }
 
         if ( k == set->length ) {
-            set->records[k].state=state;
+            set->s_records[k].state=state;
             set->length++;
         }
     }
